--- a/views/_header.html
+++ b/views/_header.html
@@ -3,4 +3,7 @@
   <span>
     Page rendered at {{ time.ctime() }}
   </span>
+  <span style="float: right">
+    {{ current_user }}
+  </span>
 </header>
