--- a/views/upload.html
+++ b/views/upload.html
@@ -2,9 +2,10 @@
 
 {% block content %}
   {% include "_header.html" %}
-  <form method="post" enctype="multipart/form-data">
+  <form action="/upload" method="post" enctype="multipart/form-data">
+     {% raw xsrf_form_html() %}
      <label for="file">Upload a file:</label>
-     <input id="file" name="file" type="file" name="somename" size="chars">
+     <input id="file" name="file" type="file" />
      <input type="submit" value="Send" />
   </form>
   {% include "_footer.html" %}
