spreadsheet styles are very presentable

--- a/static/css/normalize.css
+++ b/static/css/normalize.css
@@ -495,6 +495,6 @@ textarea {
  */
 
 table {
-    border-collapse: collapse;
+    /* border-collapse: collapse; *//* remove due to breaking of table styles */
     border-spacing: 0;
 }
