--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,19 +1,23 @@
-html { background-color: #300a24; }
-body { width:960px; margin-top: 5px; margin-left:auto; margin-right:auto; color: #FFFFFF }
+html {
+    background-color: #FFFFFF;
+    color: #222222;
+    font-size: 12px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+body { width:960px; margin-top: 5px; margin-left:auto; margin-right:auto; }
 
-a:link, a:visited, a:hover, a:active { color:#FFFFFF }
+a:link, a:visited, a:hover, a:active { color:#222222 }
 a:link, a:visited { text-decoration: none }
 a:hover, a:active { text-decoration: underline }
-span > a { display: inline-block; margin: 15px }
 
 h1 { font-family: serif; font-size: 3em; margin: 0.67em 0 0.33em }
 h2 { font-family: serif; font-size: 1.7em; margin: 0.67em 0 0.33em }
 
-body > header { border-bottom: 1px solid #FFFFFF; }
+body > header { border-bottom: 1px solid #222222; }
 body > footer { text-align: center; margin-top: 25px; margin-bottom: 15px; }
 
 section { padding: 15px 0; }
-section > header { border-bottom: 3px groove #FFFFFF; }
+section > header { border-bottom: 3px groove #222222; }
 
 article { display: table; }
 time:before { content: "published: " }
@@ -38,3 +42,63 @@ input, textarea, select {
    -webkit-border-radius: 0.5em;
  }
 input[type="submit"] { width: 100%; }
+
+
+table.document {
+    margin: 20px;
+    background: #eaebec;
+    border: #ccc 1px solid;
+    -moz-border-radius: 3px;
+    -moz-box-shadow: 0 1px 2px #d1d1d1;
+    -webkit-border-radius: 3px;
+    -webkit-box-shadow: 0 1px 2px #d1d1d1;
+    border-radius: 3px;
+    box-shadow: 0 1px 2px #d1d1d1;
+}
+table.document th {
+    border-bottom: 1px solid #e0e0e0; border-top: 1px solid #fafafa;
+    background: #ededed;
+    background: -webkit-gradient(linear, left top, left bottom, from(#ededed), to(#ebebeb));
+    background: -moz-linear-gradient(top, #ededed, #ebebeb);
+}
+table.document tr {
+    padding-left: 20px;
+    text-align: center
+}
+table.document tr:first-child th:first-child {
+    -moz-border-radius-topleft: 3px;
+    -webkit-border-top-left-radius: 3px;
+    border-top-left-radius: 3px;
+}
+table.document tr:first-child th:last-child {
+    -moz-border-radius-topright: 3px;
+    -webkit-border-top-right-radius: 3px;
+    border-top-right-radius: 3px;
+}
+table.document tr:last-child td { border-bottom: 0 }
+table.document tr:last-child td:first-child {
+    -moz-border-radius-bottomleft: 3px;
+    -webkit-border-bottom-left-radius: 3px;
+    border-bottom-left-radius: 3px;
+}
+table.document tr:last-child td:last-child {
+    -moz-border-radius-bottomright: 3px;
+    -webkit-border-bottom-right-radius: 3px;
+    border-bottom-right-radius: 3px;
+}
+table.document th:hover {
+    background: #e2e2e2;
+}
+table.document td:hover {
+    background: #f2f2f2;
+}
+table.document tr td {
+    border-bottom: 1px solid #e0e0e0; border-left: 1px solid #e0e0e0; border-top: 1px solid #ffffff;
+    background: #fafafa;
+}
+table.document a {
+    text-decoration: none;
+}
+table.document th a { display: inline-block; padding: 21px 25px 22px 25px; }
+table.document td a { display: inline-block; padding: 18px; }
+
