--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,8 +1,9 @@
 html {
-    background-color: #FFFFFF;
     color: #222222;
     font-size: 12px;
     font-family: Arial, Helvetica, sans-serif;
+    background-color: #e8ebf1;
+    background-image:url('/static/img/blue-noise.png');
 }
 body { width:960px; margin-top: 5px; margin-left:auto; margin-right:auto; }
 
