improve landing page styles

--- a/views/document.html
+++ b/views/document.html
@@ -3,7 +3,7 @@
 {% block content %}
   {% include "_header.html" %}
   {% include "_subheader.html" %}
-  <table class="document" cellspacing="0">
+  <table class="document">
     <tr>
       {% for row in header %}
         <th><a href="{{ request.path+row.url }}">{{ row.text }}</a></th>
