download as csv is working

--- a/views/_subheader.html
+++ b/views/_subheader.html
@@ -9,6 +9,6 @@
     #}
   </span>
   <span style="float: right">
-    download as <a href="">csv</a>
+    <a href="/download/{{ q }}">download as csv</a>
   </span>
 </div>
