--- a/static/css/main.css
+++ b/static/css/main.css
@@ -87,7 +87,7 @@ table.document tr:last-child td:last-child {
     -webkit-border-bottom-right-radius: 3px;
     border-bottom-right-radius: 3px;
 }
-table.document th:hover {
+table.document.result th:hover {
     background: #e2e2e2;
 }
 table.document td:hover {
@@ -97,9 +97,7 @@ table.document tr td {
     border-bottom: 1px solid #e0e0e0; border-left: 1px solid #e0e0e0; border-top: 1px solid #ffffff;
     background: #fafafa;
 }
-table.document a {
-    text-decoration: none;
-}
+table.document a { text-decoration: none; }
 table.document th a { display: inline-block; padding: 21px 25px 22px 25px; }
 table.document td a { display: inline-block; padding: 18px; }
 
