--- a/views/document.html
+++ b/views/document.html
@@ -2,7 +2,18 @@
 
 {% block content %}
   {% include "_header.html" %}
-  {% include "_subheader.html" %}
+    <div class="breadcrumb">
+    {#
+    {% for t in topic %}
+      &gt;
+      <a href="{{ t.url }}">{{ t.name }}</a>
+    {% end %}
+    #}
+    <span style="float: right">
+      <a href="/download/{{ q }}">download as csv</a>
+    </span>
+  </div>
+
   <table class="document result">
     <tr>
       {% for row in header %}
