--- a/views/_header.html
+++ b/views/_header.html
@@ -3,7 +3,7 @@
   <a href="/">Page rendered at {{ time.ctime() }}</a>
   {% if current_user %}
   <span style="float: right">
-    {{ current_user }}
+    <a href="/signout" title="Sign out current user">{{ current_user }}</a>
   </span>
   {% end %}
 </header>
