--- a/views/base.html
+++ b/views/base.html
@@ -16,6 +16,7 @@
         var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
       })();
     </script>
+    {% block head_tail %}{% end %}
   </head>
   <body>
     {% block content %}{% end %}
