--- a/views/document.html
+++ b/views/document.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}Askgraph.com - {{ dataset }} dataset{% end %}
+{% block title %}Askgraph.com - {{ dataset }}{% end %}
 
 {% block head_tail %}
 <script type="text/javascript">
