I prefer deterministic to asynchronous...

--- a/views/document.html
+++ b/views/document.html
@@ -4,25 +4,21 @@
 {% block head_tail %}
 <script type="text/javascript">
   var p = 0;
-  var busy = false;
   setInterval(function() {
     var d = document.getElementById("d");
     var bottom = (window.innerHeight + window.scrollY + 10000) >= document.body.offsetHeight;
     if( bottom && d.className.match(/partial$/g) ) {
-      p += 1; busy = true;
+      p += 1;
       var url = window.location.pathname.replace('/d/','/p/'+p+'/');
       xmlhttp=new XMLHttpRequest();
-      xmlhttp.open("GET",url,true);
-      xmlhttp.onreadystatechange = function() {
-        if (xmlhttp.readyState==4 && xmlhttp.status==200) {
-          d.innerHTML += xmlhttp.responseText;
-          if( xmlhttp.responseText.match(/^[ \t\n]*$/g) ) {
-            d.className = d.className.replace('partial','');
-          }
-          busy = false;
-        }
-      };
+      xmlhttp.open("GET",url,false);
       xmlhttp.send();
+      if (xmlhttp.readyState==4 && xmlhttp.status==200) {
+        d.innerHTML += xmlhttp.responseText;
+        if( xmlhttp.responseText.match(/^[ \t\n]*$/g) ) {
+          d.className = d.className.replace('partial','');
+        }
+      }
     }
   }, 1000);
 </script>
