fix landing page

--- a/views/index.html
+++ b/views/index.html
@@ -15,7 +15,7 @@
     </tr>
     {% for h in headers %}
     <tr>
-      <td><a href="{{ h.url }}">{{ h.text }}</a></td>
+      <td><a href="/d/{{ h.key }}">{{ h.val }}</a></td>
     </tr>
     {% end %}
   </table>
