--- a/views/index.html
+++ b/views/index.html
@@ -18,6 +18,9 @@
       <td><a href="/d/{{ h.key }}">{{ h.val }}</a></td>
     </tr>
     {% end %}
+    <tr>
+      <td><a href="/request">Request a new dataset</a></td>
+    </tr>
   </table>
   {% include "_footer.html" %}
 {% end %}
