--- a/views/document.html
+++ b/views/document.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}Askgraph.com - {{ dataset }}{% end %}
+{% block title %}Askgraph.com - {{ meta['dataset'] }}{% end %}
 
 {% block head_tail %}
 <script type="text/javascript">
@@ -26,6 +26,12 @@
 
 {% block content %}
   {% include "_header.html" %}
+  {% if meta.get("source","") %}
+  <section>
+    <b>Source:</b> <a href="{{ meta.get("source","") }}">{{ meta.get("sourcename","") or meta.get("source","") }}</a>
+  </section>
+  {% end %}
+
   <section>
     {% set q_dataset = q.split("/")[0] %}
     {% set q_url = "/d/" + q_dataset %}
@@ -37,7 +43,7 @@
     {% end %}
     <b><a href="/download/{{ q }}">download as csv</a></b>
   </section>
-
+  
   <table id="d" class="document result{% if partial %} partial{% end %}">
     <tr>
       {% for row in header %}
