--- a/views/document.html
+++ b/views/document.html
@@ -28,7 +28,7 @@
   {% include "_header.html" %}
   {% if meta.get("source","") %}
   <section>
-    <b>Source:</b> <a href="{{ meta.get("source","") }}">{{ meta.get("sourcename","") or meta.get("source","") }}</a>
+    <b>Data Source:</b> <a href="{{ meta.get("source","") }}">{{ meta.get("sourcename","") or meta.get("source","") }}</a>
   </section>
   {% end %}
 
