--- a/views/index.html
+++ b/views/index.html
@@ -6,9 +6,10 @@
     <tr>
       <th><a>Dataset</a></th>
     </tr>
+    {% import urllib %}
     {% for h in headers %}
     <tr>
-      <td><a href="/d/{{ h.key }}">{{ h.val }}</a></td>
+      <td><a href="/d/{{ urllib.quote(h.key) }}">{{ h.val }}</a></td>
     </tr>
     {% end %}
     <tr>
