--- a/views/document.html
+++ b/views/document.html
@@ -26,6 +26,19 @@
 
 {% block content %}
   {% include "_header.html" %}
+  {% if not current_user %}
+<script type="text/javascript"><!--
+google_ad_client = "ca-pub-5337724371832819";
+/* horizontal 2 */
+google_ad_slot = "1256307624";
+google_ad_width = 728;
+google_ad_height = 90;
+//-->
+</script>
+<script type="text/javascript"
+src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+</script>
+  {% end %}
   {% if meta.get("source","") %}
   <section>
     <b>Data Source:</b> <a href="{{ meta.get("source","") }}">{{ meta.get("sourcename","") or meta.get("source","") }}</a>
