linkify links in documents

--- a/views/document_page.html
+++ b/views/document_page.html
@@ -2,7 +2,9 @@
 {% for d in documents %}
 <tr>
   {% for row in d %}
-    {% if request.path.startswith("/d/") %}
+    {% if linkify(row.val) != row.val %}
+      <td>{% apply linkify %}{{ row.val }}{% end %}</td>
+    {% elif request.path.startswith("/d/") %}
       <td><a href="{{ request.path+"/"+urllib.quote(row.key+":"+row.val) }}">{{ row.val }}</a></td>
     {% else %}
       <td><a href="{{ "/d/"+request.path.split('/',3)[3]+"/"+urllib.quote(row.key+":"+row.val) }}">{{ row.val }}</a></td>
