--- a/views/privacy.html
+++ b/views/privacy.html
@@ -6,7 +6,7 @@
   <section>
     <h2>Privacy Policy</h2>
     <p>
-      We collect as much information about you as possible and use it to the full extent of the law.
+      We do not collect personally identifiable information.
     </p>
   </section>
   {% include "_footer.html" %}
