Fjorm is the impetuous form builder

--- a/views/index.html
+++ b/views/index.html
@@ -13,7 +13,7 @@
     </tr>
     {% end %}
     <tr>
-      <td><a href="/request">Request a new dataset</a></td>
+      <td><a href="/request">Make a request</a></td>
     </tr>
   </table>
   {% include "_footer.html" %}
