form page looks nice

--- a/views/work.html
+++ b/views/work.html
@@ -9,7 +9,7 @@
     <h2>{% apply linkify %}{{ link }}{% end %}</h2>
     <form action="/silent_work" method="post">
       {% raw xsrf_form_html() %}
-      {% raw fjorm.render_html(form) %}
+      {% raw fjorm.generate_html(form) %}
     </form>
   {% else %}
     <p>The work queue is empty. Good work.</p>
