--- a/views/work.html
+++ b/views/work.html
@@ -10,6 +10,7 @@
     <form action="/silent_work" method="post">
       {% raw xsrf_form_html() %}
       <input type="hidden" name="output" value="{{ output }}"/>
+      <input type="hidden" name="route" value="{{ route }}"/>
       {% raw fjorm.generate_html(form) %}
       <input type="submit" value="Submit"/>
     </form>
