--- a/views/work.html
+++ b/views/work.html
@@ -9,8 +9,10 @@
     <h2>{% apply linkify %}{{ link }}{% end %}</h2>
     <form action="/silent_work" method="post">
       {% raw xsrf_form_html() %}
+      <input type="hidden" name="link" value="{{ link }}"/>
       <input type="hidden" name="output" value="{{ output }}"/>
       <input type="hidden" name="route" value="{{ route }}"/>
+      <input type="hidden" name="workflow_id" value="{{ workflow_id }}"/>
       {% raw fjorm.generate_html(form) %}
       <input type="submit" value="Submit"/>
     </form>
