download ranged csv working

--- a/views/document.html
+++ b/views/document.html
@@ -31,7 +31,7 @@ src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
       <b><a href="{{ q_url }}">{{ q_part }}</a></b>
       &nbsp;&nbsp;&gt;&nbsp;&nbsp;
     {% end %}
-    <b><a href="/download/{{ q }}">download as csv</a></b>
+    <b><a href="/download/{{ p }}/{{ q }}">download as csv</a></b>
   </section>
   
   <table id="d" class="document result{% if partial %} partial{% end %}">
