What do you want to know?

--- a/www/views/index.html
+++ b/www/views/index.html
@@ -7,10 +7,10 @@
       <form method="post" action="/">
         {% module xsrf_form_html() %}
         <fieldset>
-          <input class="span6" type="text" name="email" placeholder="Email">
+          <input class="span6" type="text" name="contact" placeholder="How can we contact you?">
         <fieldset>
         <fieldset>
-          <textarea class="span6" rows="13" name="request" placeholder="Request"></textarea>
+          <textarea class="span6" rows="13" name="request" placeholder="What do you want to know?"></textarea>
         </fieldset>
         <button type="submit" class="btn">Submit</button>
       </form>
