--- a/www/views/index.html
+++ b/www/views/index.html
@@ -1,20 +1,60 @@
-{% extends "base.html" %}
-	
-{% block content %}
-<div class="container">
-  <div class="row">
-    <div class="span6 offset3" style="margin-top: 42px">
-      <form method="post" action="/">
-        {% module xsrf_form_html() %}
-        <fieldset>
-          <input class="span6" type="text" name="contact" placeholder="How can we contact you?">
-        <fieldset>
-        <fieldset>
-          <textarea class="span6" rows="13" name="request" placeholder="What do you want to know?"></textarea>
-        </fieldset>
-        <button type="submit" class="btn">Submit</button>
-      </form>
+<!doctype html>
+<html>
+  <head>
+    <link href="/static/css/bootstrap.css" rel="stylesheet">
+    <link href="/static/css/bootstrap-responsive.css" rel="stylesheet">
+    <link href="/static/css/docs.css" rel="stylesheet">
+  </head>
+  <body>
+    <div class="navbar navbar-inverse navbar-fixed-top">
+      {% if handler.get_argument("success","") %}
+      <div class="alert alert-success">
+        <button type="button" class="close" data-dismiss="alert">×</button>
+        <center>{{ handler.get_argument("success") }}</center>
+      </div>
+      {% end %}
+      {% if handler.get_argument("info","") %}
+      <div class="alert alert-info">
+        <button type="button" class="close" data-dismiss="alert">×</button>
+        <center>{{ handler.get_argument("info") }}</center>
+      </div>
+      {% end %}
+      {% if handler.get_argument("alert","") %}
+      <div class="alert">
+        <button type="button" class="close" data-dismiss="alert">×</button>
+        <center>{{ handler.get_argument("alert") }}</center>
+      </div>
+      {% end %}
+      {% if handler.get_argument("error","") %}
+      <div class="alert alert-error">
+        <button type="button" class="close" data-dismiss="alert">×</button>
+        <center>{{ handler.get_argument("error") }}</center>
+      </div>
+      {% end %}
     </div>
-  </div>
-</div>
-{% end %}
+    <header class="jumbotron subhead" id="overview">
+      <div class="container">
+        <h1>Askgraph</h1>
+        <p class="lead">Your information broker</p>
+      </div>
+    </header>
+    <div class="container">
+      <div class="row">
+        <div class="span6 offset3" style="margin-top: 42px">
+          <form method="post" action="/">
+            {% module xsrf_form_html() %}
+            <fieldset>
+              <input class="span6" type="text" name="contact" placeholder="How can we contact you?">
+            <fieldset>
+            <fieldset>
+              <textarea class="span6" rows="13" name="request" placeholder="What do you want to know?"></textarea>
+            </fieldset>
+            <button type="submit" class="btn">Submit</button>
+          </form>
+        </div>
+      </div>
+    </div>
+    <script src="/static/js/jquery.js"></script>
+    <script src="/static/js/bootstrap-alert.js"></script>
+  </body>
+</html>
